--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,45 @@
+# Core Settings
 PROJECT_NAME=Yakkobak
 API_V1_STR=/api/v1
 BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:8080", "http://localhost:3000"]
-DATABASE_URL=sqlite:///./sql_app.db
-SECRET_KEY=changethis
+SECRET_KEY=
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-OPENAI_API_KEY=
+
+# Database
+DATABASE_URL=
+
+# Elasticsearch
+ES_HOST=localhost
+ES_PORT=9200
+ES_INDEX_NAME=health_supplements
 ELASTICSEARCH_URL=http://localhost:9200
+
+# External APIs
+OPENAI_API_KEY=
+FOOD_SAFETY_BASE_URL=http://openapi.foodsafetykorea.go.kr/api
+
+# RAG Settings
+EMBEDDING_MODEL=jhgan/ko-sroberta-multitask
+EMBEDDING_DIM=768
+DEFAULT_TOP_K=5
+VECTOR_WEIGHT=0.8
+KEYWORD_WEIGHT=0.2
+RAG_WEIGHT=0.5
+GEMINI_WEIGHT=0.5
+
+# Gemini Settings
+GEMINI_MODEL=gemini-2.0-flash
+GEMINI_TEMPERATURE=0.7
+GEMINI_MAX_OUTPUT_TOKENS=500
+
+# Feature Flags
+SERP_API_ENABLED=False
+SERP_MAX_RESULTS=5
+SERP_TIMEOUT=5
+
+# Other
+MAX_RESPONSE_LENGTH=200
+# API 설정
+API_BATCH_SIZE=1000
+API_REQUEST_DELAY=0.5
