--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,14 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        push: true
+        push: ${{ github.event_name == 'push' }}  # push 이벤트(PR 병합)일 때만 ACR에 푸시
         tags: |
           ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest
     
     # 4. Azure App Service 배포
     - name: Deploy to Azure App Service
+      if: github.event_name == 'push'  # push 이벤트(PR 병합)일 때만 배포 실행
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
