--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
-
 services:
+  # ============================================
   # FastAPI 애플리케이션
+  # ============================================
   api:
     build:
       context: .
@@ -17,7 +17,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ./logs:/app/logs
+      - ./logs:/workspace/logs      # 로그 파일 저장
+      - ./app:/workspace/app        # 개발 시 코드 자동 리로드
     networks:
       - yakkobak-network
     depends_on:
@@ -31,11 +32,13 @@ services:
       retries: 3
       start_period: 40s
 
-  # Elasticsearch
+  # ============================================
+  # Elasticsearch (Docker Hub - 사전 색인된 이미지)
+  # ============================================
   elasticsearch:
-    build:
-      context: .
-      dockerfile: Dockerfile.elasticsearch
+    image: albob1403/yakkobak-elasticsearch:latest
+    pull_policy: always
+    entrypoint: ["/usr/local/bin/docker-entrypoint.sh"]  # 기본 entrypoint로 오버라이드
     container_name: yakkobak-es
     environment:
       - discovery.type=single-node
@@ -57,7 +60,9 @@ services:
       retries: 5
     restart: unless-stopped
 
+  # ============================================
   # Kibana
+  # ============================================
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.0
     container_name: yakkobak-kibana
@@ -84,46 +89,8 @@ services:
 
 volumes:
   es_data:
-    external: true
-    name: health-supplement-rag_es_data
+    driver: local
 
 networks:
   yakkobak-network:
     driver: bridge
-# docker-compose.yml
-# Docker 컨테이너 관리 설정 파일
-# FastAPI 서버를 실행합니다 (데이터베이스 미사용)
-
-version: '3.8'
-
-services:
-  # ============================================
-  # 웹 서버 서비스 (FastAPI)
-  # ============================================
-  web:
-    # 현재 디렉토리의 Dockerfile을 사용하여 이미지를 빌드
-    build:
-      context: .
-      dockerfile: Dockerfile
-
-    # 컨테이너 이름 설정
-    container_name: app-fastapi-server
-
-    # 포트 매핑: 로컬의 8000 포트를 컨테이너의 8000 포트에 연결
-    # 브라우저에서 http://localhost:8000 으로 접속 가능
-    ports:
-      - "8000:8000"
-
-    # 볼륨 설정: 로컬 코드를 컨테이너에 마운트
-    # 코드를 수정하면 즉시 컨테이너에 반영됩니다 (--reload 옵션과 함께 사용)
-    volumes:
-      - ./app:/app
-
-    # 환경 변수 파일 지정
-    # .env 파일의 내용을 환경 변수로 사용합니다
-    env_file:
-      - .env
-
-    # 컨테이너가 중지되면 자동으로 재시작
-    # 개발 중 에러로 서버가 중단되어도 자동으로 다시 시작됩니다
-    restart: unless-stopped
